Plugin can now launch JavaFX from Ctrl+1; very buggy